<resources>
    <string name="app_name">Nearby Task</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="backbutton">BackButton</string>
    <string name="type_here">Task Description</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="feb_12">FEB 12</string>
    <string name="title">Enter Title For Task</string>
</resources>
