<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewtaskActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="75dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/new_task"
        android:textSize="20sp" />

    <Button
        android:id="@+id/savetask"
        style="@android:style/Widget.Material.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view2"
        android:layout_alignParentEnd="true"
        android:onClick="saveTask"
        android:text="@string/save" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/backbutton"
        android:onClick="BackButton"
        app:srcCompat="@drawable/backsign" />

    <MultiAutoCompleteTextView
        android:id="@+id/taskdetail"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="151dp"
        android:autoLink="web|email|phone|map"
        android:background="@null"
        android:hint="@string/type_here" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="343dp"
        android:layout_height="253dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="16dp" />

</android.widget.RelativeLayout>