<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Spruce
  ~
  ~     Copyright (c) 2017 WillowTree, Inc.
  ~     Permission is hereby granted, free of charge, to any person obtaining a copy
  ~     of this software and associated documentation files (the "Software"), to deal
  ~     in the Software without restriction, including without limitation the rights
  ~     to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~     copies of the Software, and to permit persons to whom the Software is
  ~     furnished to do so, subject to the following conditions:
  ~     The above copyright notice and this permission notice shall be included in
  ~     all copies or substantial portions of the Software.
  ~     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~     FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~     AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~     THE SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeholder_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="97dp"
        android:background="@color/recycler_background"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/map"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/map"
        app:srcCompat="@drawable/gmap" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="199dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        android:text="@string/task"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/taskTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="112dp"
        android:text="@string/feb_12" />

</RelativeLayout>